# reqster

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  requirements.md  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: RequestPanel.tsx  ResponsePanel.tsx  Sidebar.tsx
src/hooks/: useRequest.ts
src/types/: index.ts
